# compositor-killer

./: LICENSE  README.md  main.c  meson.build
